# docker-rust-k8s-UI-gui-owner-drawn

./: .gitattributes  .gitignore  Cargo.toml  Cross.toml  Makefile
.github/workflows/: ci.yml
assets/models/: brain_meta.json  scan_meta.json
assets/models/cases/BRATS_020/: scan_meta.json
assets/models/cases/BRATS_022/: scan_meta.json
assets/models/cases/BRATS_088/: scan_meta.json
assets/models/cases/BRATS_117/: scan_meta.json
assets/models/cases/BRATS_141/: scan_meta.json
assets/models/cases/BRATS_155/: scan_meta.json
assets/models/cases/BRATS_206/: scan_meta.json
assets/models/cases/BRATS_223/: scan_meta.json
assets/models/checkpoints/: nnunet_brats_4ch.pth
assets/models/onnx/: nnunet_brats_2023_4ch.onnx  nnunet_brats_4ch.onnx  nnunet_brats_v2_4ch.onnx
assets/models/training/: training_4ch_history.json
scripts/: dev.ps1  extract_brain_mesh.py  gen_icon.py  infer_tumor_3d.py
scripts/ml/: batch_infer_cases.py  download_brats2023.py  extract_brain_mesh.py  finetune_brats2023.py  finetune_v2.py  infer_single.py  infer_tumor_3d.py  integrate_turbosquid_brain.py  model.py  run_finetune.py  select_top_cases.py  train_brats_4ch.py
src/: camera.rs  config.rs  embedded.rs  lib.rs  main.rs  mesh.rs  python_env.rs  renderer.rs  shader.wgsl  shader2d_prim.wgsl  shader3d.wgsl  shader_slice.wgsl  volume.rs
src/app/: input.rs  login.rs  menu.rs  mod.rs  projection.rs  state.rs  ui_builder.rs
src/app/infer/: mod.rs  pipeline.rs
src/app/input/: events.rs  mod.rs  redraw.rs
src/app/ui_builder/: labels.rs  mod.rs  primitives.rs
src/pipeline/: inference.rs  marching_cubes.rs  mesh_export.rs  mod.rs  nifti_loader.rs
src/renderer/: mod.rs  pipelines.rs  prim2d.rs  render.rs  state.rs
src/ui/: label.rs  mod.rs
src/widgets/: button.rs  checkbox.rs  mod.rs  text_input.rs  theme.rs  types.rs
tests/: layout_test.rs  scan_meta_test.rs
(+2 files in other folders)
