[package]
name = "docker-rust-k8s-ui-gui"
version = "0.3.0"
edition = "2024"
authors = ["Diego L. Silva (diegslva)"]
description = "NeuroScan — Visualizador Médico 3D com segmentação IA"
repository = "https://github.com/diegslva/docker-rust-k8s-UI-gui-owner-drawn"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "neuroscan"
path = "src/main.rs"

[lib]
name = "neuroscan_core"
path = "src/lib.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
winit = "0.30"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
anyhow = "1.0"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
glam = { version = "0.29", features = ["bytemuck"] }
glyphon = "0.9"
pollster = "0.3"
tobj = "4"
wgpu = "25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

# Pipeline de inferência nativo (substitui subprocess Python)
ort = "2.0.0-rc.12"
ndarray = "0.16"
nifti = { version = "0.17", features = ["ndarray_volumes"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
